# kira_cdh_compat_lsh

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: preflight.yml  release-on-tag.yml
benches/: lsh_bench.rs
examples/: build_and_query.rs
src/: errors.rs  kmv.rs  lib.rs  lsh.rs  minhash.rs  sketch.rs  util.rs
tests/: basic.rs
