[package]
name = "kira_cdh_compat_lsh"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/ARyaskov/kira_cdh_compat_lsh"
description = "Candidate search (LSH/MinHash & KMV) for high-identity sequence clustering pipelines compatible with CD-HIT outputs."
categories = ["science", "algorithms"]
keywords = ["lsh", "minhash", "kmv", "bioinformatics", "clustering"]

[features]
# Parallelism via rayon; enabled by default.
default = ["parallel"]
parallel = ["dep:rayon"]

serde = ["dep:serde", "dep:serde_bytes"]

[dependencies]
hashbrown = "0.14"
rustc-hash = "2"
smallvec = "1.13"
thiserror = "1.0"

# Optional
rayon = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "lsh_bench"
harness = false
